align itens and bug fix

--- a/frontweb/src/pages/Home/styles.css
+++ b/frontweb/src/pages/Home/styles.css
@@ -1,5 +1,61 @@
 .home-container {
-    padding:20px;
-    font-size:26px;
+    padding:10px;
+    font-size:20px;
+    text-align: center;
     border:1px solid red;
+}
+
+.home-card {
+    display: flex;
+    flex-direction: column-reverse;
+    background-color: #FFF;
+    border:1px solid orange;
+    border-radius: 20px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0.25);
+}
+
+.home-content-container {
+    padding: 10px;
+    border:1px solid blue;
+}
+
+.home-content-container h1 {
+    width: 100%;
+    color:rgba(0, 0, 0, 0.991);
+    font-size: 1.5em;
+    margin: auto;
+    padding-top:10px;
+    padding-bottom:15px;
+  
+}
+
+.home-content-container p {
+    width: 100%;
+    font-size: 0.8em;
+    color:#9E9E9E;
+    margin: auto;
+    padding-bottom:30px;
+  
+}
+
+.home-image-container {
+    padding: 50px 15px;
+    border:1px solid purple;
+}
+
+.home-image-container svg {
+    width: 100%;
+    height: auto;
+}
+
+.home-content-container h1,
+.home-content-container p {
+    text-align: center;
+    /* Adicionado margens automáticas nos lados para centralizar caso os elementos se tornem blocos. */
+    margin-left: auto;
+    margin-right: auto;
+}
+/* button inicie sua busca */
+h6 {
+    color: white !important;
 }
